--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.460.0",
     "next": "14.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.460.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.4.0",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
-    "tailwindcss": "^3.4.3",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.0"
   }
 }
